--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                 <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
                 <div class="portfolio-info">
                   <div class="content">
-                    <span class="category">Web Design</span>
-                    <h4>Woodcraft Design</h4>
+                    <span class="category">Gym</span>
+                    <h4>Sk Fitness Gym</h4>
                     <div class="portfolio-links">
                       <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox" title="Woodcraft Design"><i
                           class="bi bi-plus-lg"></i></a>
