--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                     <span class="category">Gym</span>
                     <h4>Sk Fitness Gym</h4>
                     <div class="portfolio-links">
-                      <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox" title="Woodcraft Design"><i
-                          class="bi bi-plus-lg"></i></a>
-                      <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
+
+                      <a href="https://sk-fitness-gym.vercel.app/" target="_blank" title="More Details"><i
+                          class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
