--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
             <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
+                <img src="image.png" class="img-fluid" alt="Portfolio Image" loading="lazy">
                 <div class="portfolio-info">
                   <div class="content">
                     <span class="category">Gym</span>
